--- a/projects/react-pwa/manifest.json
+++ b/projects/react-pwa/manifest.json
@@ -3,13 +3,13 @@
   "name": "ReactPWA - AshokDey",
   "icons": [
     {
-      "src": "icon.ico",
-      "sizes": "128x128",
+      "src": "icon.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#4286f4"
+  "background_color": "#f21f65"
 }
