--- a/projects/react-pwa/manifest.json
+++ b/projects/react-pwa/manifest.json
@@ -11,5 +11,5 @@
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#f21f65"
+  "background_color": "#42c8f4"
 }
